# LaminarEngine

./: .gitattributes  .gitignore  Directory.Build.props  GameScratch.sln  LICENSE  Laminar.sln  README.md  build.sh  linker.xml
Configs/: Android.publish.platforms.targets  BuildDependencies.targets  GameCooker.targets  ProjectPaths.targets  Standalone.publish.platforms.targets
DemoBin/win32/: Info.txt
Editor/: Editor.csproj  EditorEntry.cs  Program.cs  app.manifest
Editor/AssemblyHotReload/: BuildLogger.cs  GameAssemblyBuilder.cs
Editor/Cooker/: AssetData.cs  AssetsCooker.cs  CookOptions.cs  CookingPlatform.cs  CookingType.cs  GameProject.cs  IAssetProcessor.cs  ProjectConfig.cs
Editor/Data/: imgui.ini
Editor/Drawers/: ActorInspectorDrawer.cs  DefaultInspectorDrawer.cs  EditorDrawerBase.cs  EditorGuiFieldsResolver.EObject.cs  EditorGuiFieldsResolver.cs  IDrawerEditor.cs  MaterialInspectorDrawer.cs  PropertiesDrawerEditor.cs  PropertiesGUIDrawEditor.cs  PropertyDrawer.cs  SpriteInspectorDrawer.cs  TextInspectorDrawer.cs  (+2 more)
Editor/Third/native/: CMakeLists.txt  EditorNatives.cpp  EditorNatives.h  EditorNativesDefines.h  Logger.h  Types.h
Editor/Third/native/ImAllGui/: CMakeLists.txt  ImAllDefines.h  ImAllGui.cpp  ImAllGui.h  Logger.h  main.cpp
Editor/Third/native/ImAllGui/cimgui/: CMakeLists.txt  cimgui.h
Editor/Third/native/ImAllGui/cimgui/imgui/: imgui.cpp
Editor/Third/native/ImAllGui/cimguizmo/: cimguizmo.cpp  cimguizmo.h
Editor/Third/native/ImAllGui/cimguizmo/imguizmo/: ImGuizmo.cpp  ImGuizmo.h
Editor/Third/native/ImAllGui/cimnodes/: CMakeLists.txt  cimnodes.cpp  cimnodes.h
Editor/Third/native/ImAllGui/cimnodes/imnodes/: CMakeLists.txt  imnodes.h
Editor/Third/native/ImAllGui/imgui/: version.txt
Editor/Third/native/_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Editor/Third/native/_build/cimgui/: cmake_install.cmake
Editor/Third/native/_build/cimguizmo/: cmake_install.cmake
Editor/Third/native/_build/cimnodes/: cmake_install.cmake
Editor/Third/native/_build/cimnodes/imnodes/: cmake_install.cmake
Editor/Third/native/_build/glfw/: cmake_install.cmake
Editor/Third/native/_build/glfw/src/: cmake_install.cmake  glfw3.pc
Editor/Third/native/avirimageresize/: cavirresize.cpp
Editor/Third/native/cimgui/: CMakeLists.txt  cimgui.h
Editor/Third/native/cimgui/imgui/: imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp
Editor/Third/native/cimguizmo/: CMakeLists.txt  cimguizmo.cpp  cimguizmo.h
Editor/Third/native/cimguizmo/imguizmo/: ImGuizmo.h
Editor/Third/native/cimnodes/: CMakeLists.txt  cimnodes.h
Editor/Third/native/cimnodes/imnodes/: CMakeLists.txt
Editor/Third/native/glfw/: CMakeLists.txt
Editor/Third/native/nativefiledialog/src/: CMakeLists.txt  MessageBox.cpp  cfiledialog.cpp
Editor/Third/native/nativemenu/: NativeMenu.cpp  NativeMenu.h  NativeMenu.mm  cnativemenu.cpp
Editor/Third/native/stbimagewrite/: cstbimagewrite.cpp
Engine/: Application.cs  AssemblyInfo.cs  Engine.cs  Engine.csproj  EngineInfo.cs  ExecutableEntry.cs  GFSEngine.cs  LaminarEngine.cs  TODO.txt
Engine/Third/Native/dualsense/: CMakeLists.txt  README.md
Engine/Third/Native/dualsense/Libs/miniaudio/: .gitignore  README.md  miniaudio.h  miniaudio_impl.cpp
Engine/Third/Native/dualsense/Source/: CMakeLists.txt  test_utils.h
Engine/Third/Native/dualsense/Source/Features/: test_audio_haptics.cpp  test_channels_haptics.cpp  test_gamepad_inputs.cpp  test_gamepad_outputs.cpp
Engine/Third/Native/dualsense/Source/Platform/linux/: linux_device_info.cpp  linux_device_info.h  linux_hardware_policy.h
Engine/Third/Native/dualsense/Source/Platform/windows/: windows_device_info.cpp  windows_device_info.h  windows_hardware_policy.h
Engine/Third/Native/dualsense/Source/Private/GCore/Interfaces/: IPlatformHardwareInfo.cpp
Engine/Third/Native/dualsense/Source/Private/GImplementations/Libraries/Base/: SonyGamepadAbstract.cpp
Engine/Third/Native/dualsense/Source/Private/GImplementations/Libraries/DualSense/: DualSenseLibrary.cpp
Engine/Third/Native/dualsense/Source/Private/GImplementations/Libraries/DualShock/: DualShockLibrary.cpp
Engine/Third/Native/dualsense/Source/Private/GImplementations/Utils/: GamepadOutput.cpp
Engine/Third/Native/dualsense/Source/Public/GCore/Interfaces/: IDeviceRegistry.h  IPlatformHardwareInfo.h  ISonyGamepad.h
Engine/Third/Native/dualsense/Source/Public/GCore/Interfaces/Segregations/: IGamepadAudioHaptics.h  IGamepadLightbar.h  IGamepadSensors.h
Engine/Third/Native/dualsense/Source/Public/GCore/Templates/: TBasicDeviceRegistry.h  TGenericHardwareInfo.h
Engine/Third/Native/dualsense/Source/Public/GCore/Types/Structs/Context/: AudioContext.h  DeviceContext.h
Engine/Third/Native/dualsense/Source/Public/GCore/Utils/: SoDefines.h
Engine/Third/Native/dualsense/Source/Public/GImplementations/Libraries/Base/: SonyGamepadAbstract.h
Engine/Third/Native/dualsense/Source/Public/GImplementations/Libraries/DualSense/: DualSenseLibrary.h
Engine/Third/Native/dualsense/Source/Public/GImplementations/Libraries/DualShock/: DualShockLibrary.h
Engine/Third/Native/dualsense/Source/Public/GImplementations/Utils/: GamepadAudio.h  GamepadOutput.h
Engine/Third/Native/miniaudio/: CMakeLists.txt  ios_miniaudio_build.sh  library.c  library.h
Engine/Third/Native/runtimecore/: CMakeLists.txt  PlaystationGamepad.cpp  RuntimeCore.cpp  RuntimeCoreAPI.h
Game/: Game.csproj  GameManager.cs  _ReleaseAssetsList.txt
GameAssetsEditor/: MainWindow.xaml.cs
GameCooker/: AssetsCooker.cs  CLIEntryPoint.cs  CookOptions.cs  CookerPaths.cs  CookingPlatform.cs  GameCooker.csproj  GameProject.cs  IAssetProcessor.cs
Sandbox/: Entry_Desktop.csproj  Program.cs  PublishPlatformTargets.targets  Sandbox.csproj
SharedTypes/: AssemblyInfo.cs  AssetCompressor.cs  AssetType.cs  AssetUtils.cs  AssetsDatabaseInfo.cs  Bounds.cs  CollectionType.cs  IRDataTypes.cs  Paths.cs  PluginLoadContext.cs  ReflectionUtilsShared.cs  ShaderData.cs  ShaderSource.cs  ShaderUniform.cs  SharedTypes.csproj  TextureAtlasData.cs  UniformType.cs
(+1679 files in other folders)
